feat: add excel unified parser support
1. 新增Excel元数据解析相关DTO类，包括ExcelMetadata、SheetMetadata、ColumnMetadata等
2. 实现ExcelParserService，提供Excel元数据提取功能
3. 实现ExcelParser文件解析器，接入统一解析路由
4. 新增ExcelParserController，提供parse-excel-metadata接口
5. 完善FileParserRouter，注入ExcelParser支持xls/xlsx/csv格式
6. 新增配套单元测试用例